<resources>
    <string name="app_name">FilmoQuizz</string>
    <string name="main_welcome">FilmoQuizz contient une large bibliothèque de film avec leur synopsis. Inscrivez-vous afin de tester vos connaissances, sur notre super Quizz et découvrez notre bibliothèque de films!</string>
    <string name="text_login">CONNEXION</string>
    <string name="text_username">PSEUDO</string>
    <string name="text_password">MOT DE PASSE</string>
    <string name="text_confirm_password">CONFIRMER</string>
    <string name="text_register">ENREGISTRER</string>
    <string name="home_movies_list">Venez découvrir notre large bibliothèque de films</string>
    <string name="home_quizz">Testez vos connaissance sur notre bibliothèque de films à travers notre super Quizz !</string>
    <string name="movie_db_api_key">f68f576bcdf9846f104b46cb942dd9ed</string>
</resources>