<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.QuizzActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="96dp"
            android:layout_height="82dp"
            android:orientation="horizontal"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toStartOf="@+id/filmoQuizz"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:padding="20dp"
            android:singleLine="false"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/filmoQuizzLogo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@string/main_welcome" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textColor="@color/colorSteelBlue"
            android:textStyle="bold"
            android:padding="4dp"
            android:textSize="24sp"
            android:text="@string/text_login" />
        <EditText
            android:id="@+id/activity_main_login_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:hint="@string/text_username" />
        <EditText
            android:id="@+id/activity_main_login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:hint="@string/text_password" />
        <Button
            android:id="@+id/activity_main_login_submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorSteelBlue"
            android:textColor="@color/white"
            android:layout_margin="15dp"
            android:text="@string/text_login" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textColor="@color/colorSteelBlue"
            android:textStyle="bold"
            android:padding="4dp"
            android:textSize="24sp"
            android:text="@string/text_register" />
        <EditText
            android:id="@+id/activity_main_register_pseudo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:hint="@string/text_username" />
        <EditText
            android:id="@+id/activity_main_register_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:hint="@string/text_password" />
        <EditText
            android:id="@+id/activity_main_register_pseudo_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:hint="@string/text_confirm_password" />
        <Button
            android:id="@+id/activity_main_register_submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorSteelBlue"
            android:textColor="@color/white"
            android:layout_margin="15dp"
            android:text="@string/text_register" />
    </LinearLayout>
</LinearLayout>