<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.QuizzActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="96dp"
            android:layout_height="82dp"
            android:orientation="horizontal"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:padding="20dp"
            android:singleLine="false"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:text="@string/home_movies_list"
        android:textSize="16dp" />

    <ImageButton
        android:id="@+id/activity_home_movies_list"
        android:layout_width="217dp"
        android:layout_height="156dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:src="@drawable/encyclopedie"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:text="@string/home_quizz"
        android:textSize="16dp"/>

    <ImageButton
        android:id="@+id/activity_home_play_quizz"
        android:layout_width="246dp"
        android:layout_height="162dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:src="@drawable/quizz"/>
</LinearLayout>